Fix TEC add to calendar button readability

--- a/tribe-events/tribe-events.css
+++ b/tribe-events/tribe-events.css
@@ -3,10 +3,18 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.tribe-events-sub-nav a, .tribe-events-back a {
+.tribe-events-sub-nav a,
+.tribe-events-back a {
     font-weight: normal !important;
 }
 
 .event-is-recurring {
     font-weight: normal;
+}
+
+.tribe-events-gcal,
+.tribe-events-ical {
+    color: #fff !important;
+    font-weight: 700 !important;
+    padding: 12px 25px;
 }
